コメントの文字化け修正途中

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -275,7 +275,7 @@
     <ClCompile Include="NewEngine\Util\FrameRate.cpp" />
     <ClCompile Include="NewEngine\Util\Random.cpp" />
     <ClCompile Include="NewEngine\Sound\Sound.cpp" />
-    <ClCompile Include="NewEngine\Util\Rect.cpp" />
+    <ClCompile Include="NewEngine\Util\RectAngle.cpp" />
     <ClCompile Include="NewEngine\Util\NewEngineSetting.cpp" />
     <ClCompile Include="NewEngine\Util\Timer.cpp" />
     <ClCompile Include="NewEngine\Util\Transform.cpp" />
@@ -448,7 +448,7 @@
     <ClInclude Include="NewEngine\Util\NewEngineEnum.h" />
     <ClInclude Include="NewEngine\Util\FrameRate.h" />
     <ClInclude Include="NewEngine\Util\Random.h" />
-    <ClInclude Include="NewEngine\Util\Rect.h" />
+    <ClInclude Include="NewEngine\Util\RectAngle.h" />
     <ClInclude Include="NewEngine\Util\NewEngineSetting.h" />
     <ClInclude Include="NewEngine\Util\Singleton.h" />
     <ClInclude Include="NewEngine\Sound\Sound.h" />
