--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -130,6 +130,7 @@
     <ClCompile Include="Application\SourceCode\Character\Character.cpp" />
     <ClCompile Include="Application\SourceCode\Field\Cloud.cpp" />
     <ClCompile Include="Application\SourceCode\UI\BossGaugeUI.cpp" />
+    <ClCompile Include="Application\SourceCode\UI\CameraTargetUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\IUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\OperationUI.cpp" />
     <ClCompile Include="Application\SourceCode\UI\PlayerGaugeUI.cpp" />
@@ -300,6 +301,7 @@
     <ClInclude Include="Application\SourceCode\Character\Character.h" />
     <ClInclude Include="Application\SourceCode\Field\Cloud.h" />
     <ClInclude Include="Application\SourceCode\UI\BossGaugeUI.h" />
+    <ClInclude Include="Application\SourceCode\UI\CameraTargetUI.h" />
     <ClInclude Include="Application\SourceCode\UI\IUI.h" />
     <ClInclude Include="Application\SourceCode\UI\OperationUI.h" />
     <ClInclude Include="Application\SourceCode\UI\PlayerGaugeUI.h" />
