Mathまで修正した

--- a/Project/NewEngine.vcxproj
+++ b/Project/NewEngine.vcxproj
@@ -239,16 +239,16 @@
     <ClCompile Include="NewEngine\Object\3D\Line.cpp" />
     <ClCompile Include="NewEngine\Object\3D\ParticleParam.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Model\ObjModel.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\AssimpLoader.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Model\AssimpLoader.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Billboard.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\FbxModel.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Model\FbxModel.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Material.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Mesh.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Model\Model.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\ModelManager.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Model\ModelManager.cpp" />
     <ClCompile Include="NewEngine\Object\3D\Object3D.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture\Texture.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\TextureAnimeiton.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Texture\TextureAnimeiton.cpp" />
     <ClCompile Include="NewEngine\Object\Other\Texture\VolumeTexture.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\BufferResource.cpp" />
     <ClCompile Include="NewEngine\Render\Buffer\DepthBuffer.cpp" />
@@ -268,7 +268,7 @@
     <ClCompile Include="NewEngine\Render\ShaderCompiler.cpp" />
     <ClCompile Include="NewEngine\Render\ShaderCompilerManager.cpp" />
     <ClCompile Include="NewEngine\Render\Viewport.cpp" />
-    <ClCompile Include="NewEngine\Object\Other\TextureManager.cpp" />
+    <ClCompile Include="NewEngine\Object\Other\Texture\TextureManager.cpp" />
     <ClCompile Include="NewEngine\Sound\SoundManager.cpp" />
     <ClCompile Include="NewEngine\Util\BezierCurve.cpp" />
     <ClCompile Include="NewEngine\Util\Color.cpp" />
@@ -404,18 +404,18 @@
     <ClInclude Include="NewEngine\Object\3D\GPUEmitter.h" />
     <ClInclude Include="NewEngine\Object\3D\ParticleParam.h" />
     <ClInclude Include="NewEngine\Object\Other\Model\ObjModel.h" />
-    <ClInclude Include="NewEngine\Object\Other\AssimpLoader.h" />
+    <ClInclude Include="NewEngine\Object\Other\Model\AssimpLoader.h" />
     <ClInclude Include="NewEngine\Object\Other\Billboard.h" />
-    <ClInclude Include="NewEngine\Object\Other\FbxModel.h" />
+    <ClInclude Include="NewEngine\Object\Other\Model\FbxModel.h" />
     <ClInclude Include="NewEngine\Object\Other\MaterialColor.h" />
-    <ClInclude Include="NewEngine\Object\Other\TextureAnimeiton.h" />
+    <ClInclude Include="NewEngine\Object\Other\Texture\TextureAnimeiton.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture\Texture.h" />
     <ClInclude Include="NewEngine\Object\3D\Camera.h" />
     <ClInclude Include="NewEngine\Object\3D\Line.h" />
     <ClInclude Include="NewEngine\Object\Other\Material.h" />
     <ClInclude Include="NewEngine\Object\Other\Mesh.h" />
     <ClInclude Include="NewEngine\Object\Other\Model\Model.h" />
-    <ClInclude Include="NewEngine\Object\Other\ModelManager.h" />
+    <ClInclude Include="NewEngine\Object\Other\Model\ModelManager.h" />
     <ClInclude Include="NewEngine\Object\3D\Object3D.h" />
     <ClInclude Include="NewEngine\Object\Other\Texture\VolumeTexture.h" />
     <ClInclude Include="NewEngine\Render\Buffer\BufferResource.h" />
@@ -442,7 +442,7 @@
     <ClInclude Include="NewEngine\Render\ShaderCompilerManager.h" />
     <ClInclude Include="NewEngine\Render\VertexBufferData.h" />
     <ClInclude Include="NewEngine\Render\Viewport.h" />
-    <ClInclude Include="NewEngine\Object\Other\TextureManager.h" />
+    <ClInclude Include="NewEngine\Object\Other\Texture\TextureManager.h" />
     <ClInclude Include="NewEngine\Sound\SoundManager.h" />
     <ClInclude Include="NewEngine\Sound\WaveSound.h" />
     <ClInclude Include="NewEngine\Util\BezierCurve.h" />
