--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -477,16 +477,10 @@
     <ClCompile Include="NewEngine\Render\RootSignature.cpp">
       <Filter>NewEngine\Source\Render</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\Other\ModelManager.cpp">
-      <Filter>NewEngine\Source\Object\Other</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Mesh.cpp">
       <Filter>NewEngine\Source\Object\Other</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Material.cpp">
-      <Filter>NewEngine\Source\Object\Other</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Object\Other\TextureManager.cpp">
       <Filter>NewEngine\Source\Object\Other</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Light\Fog.cpp">
@@ -507,14 +501,8 @@
     <ClCompile Include="NewEngine\Sound\Sound.cpp">
       <Filter>NewEngine\Source\Sound</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\Other\TextureAnimeiton.cpp">
-      <Filter>NewEngine\Source\Object\Other</Filter>
-    </ClCompile>
     <ClCompile Include="Application\SourceCode\Scene\LogoScene.cpp">
       <Filter>Application\Source\Scene</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Object\Other\AssimpLoader.cpp">
-      <Filter>NewEngine\Source\Object\Other</Filter>
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Model\ObjModel.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
@@ -522,7 +510,7 @@
     <ClCompile Include="NewEngine\Object\Other\Model\Model.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\Other\FbxModel.cpp">
+    <ClCompile Include="NewEngine\Object\Other\Model\FbxModel.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\GaugeParam.cpp">
@@ -855,6 +843,18 @@
     <ClCompile Include="Application\SourceCode\UI\CameraTargetUI.cpp">
       <Filter>Uncategorized\Source</Filter>
     </ClCompile>
+    <ClCompile Include="NewEngine\Object\Other\Model\ModelManager.cpp">
+      <Filter>NewEngine\Source\Object\Other\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\Other\Model\AssimpLoader.cpp">
+      <Filter>NewEngine\Source\Object\Other\Model</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\Other\Texture\TextureAnimeiton.cpp">
+      <Filter>NewEngine\Source\Object\Other\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\Other\Texture\TextureManager.cpp">
+      <Filter>NewEngine\Source\Object\Other\Texture</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="NewEngine\Render\Buffer\ConstantBuffer.h">
@@ -974,9 +974,6 @@
     <ClInclude Include="NewEngine\Render\RootSignature.h">
       <Filter>NewEngine\Header\Render</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\ModelManager.h">
-      <Filter>NewEngine\Header\Object\Other</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Mesh.h">
       <Filter>NewEngine\Header\Object\Other</Filter>
     </ClInclude>
@@ -1013,9 +1010,6 @@
     <ClInclude Include="NewEngine\Sound\WaveSound.h">
       <Filter>NewEngine\Header\Sound</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\AssimpLoader.h">
-      <Filter>NewEngine\Header\Object\Other</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\MaterialColor.h">
       <Filter>NewEngine\Header\Object\Other</Filter>
     </ClInclude>
@@ -1025,7 +1019,7 @@
     <ClInclude Include="NewEngine\Object\Other\Model\ObjModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\FbxModel.h">
+    <ClInclude Include="NewEngine\Object\Other\Model\FbxModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
     <ClInclude Include="Application\SourceCode\GaugeParam.h">
@@ -1379,11 +1373,17 @@
     <ClInclude Include="Application\SourceCode\UI\CameraTargetUI.h">
       <Filter>Uncategorized\Header</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\TextureManager.h">
+    <ClInclude Include="NewEngine\Object\Other\Texture\TextureManager.h">
       <Filter>NewEngine\Header\Object\Other\Texture</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\Other\TextureAnimeiton.h">
+    <ClInclude Include="NewEngine\Object\Other\Texture\TextureAnimeiton.h">
       <Filter>NewEngine\Header\Object\Other\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\Other\Model\AssimpLoader.h">
+      <Filter>NewEngine\Header\Object\Other\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\Other\Model\ModelManager.h">
+      <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
