--- a/Project/NewEngine.vcxproj.filters
+++ b/Project/NewEngine.vcxproj.filters
@@ -364,6 +364,18 @@
     <Filter Include="Application\Header\Field\FieldObject">
       <UniqueIdentifier>{92002e78-4a58-4326-ab66-0bd15f727d68}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Application\Source\Motion">
+      <UniqueIdentifier>{8bc7fa8f-b02b-4031-8b49-5c64eacc574f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\Motion\Boss">
+      <UniqueIdentifier>{5a68237c-d556-4f69-b484-c4f556798670}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\Motion\Player">
+      <UniqueIdentifier>{02141294-5805-4c2e-91da-e2db5670dc91}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Application\Source\Motion\Weapon">
+      <UniqueIdentifier>{d736aef2-4b12-4661-b374-b37a367525d6}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NewEngine\Render\Buffer\IndexBuffer.cpp">
@@ -507,9 +519,6 @@
     <ClCompile Include="NewEngine\Object\Other\Model\FbxModel.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\GaugeParam.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="Application\SourceCode\CollisionManager.cpp">
       <Filter>Application\Source</Filter>
     </ClCompile>
@@ -545,9 +554,6 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Collision\ICollider.cpp">
       <Filter>NewEngine\Source\Collision</Filter>
-    </ClCompile>
-    <ClCompile Include="NewEngine\Object\3D\ParticleParam.cpp">
-      <Filter>Uncategorized\Source</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\Effect\EffectManager.cpp">
       <Filter>Application\Source\Effect</Filter>
@@ -690,53 +696,8 @@
     <ClCompile Include="NewEngine\Render\RenderTarget.cpp">
       <Filter>NewEngine\Source\Render\Buffer</Filter>
     </ClCompile>
-    <ClCompile Include="NewEngine\Object\3D\ParticleMesh.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Billboard.cpp">
       <Filter>NewEngine\Source\Util</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\BossAttack3Motion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\BossAttack2Motion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\BossGrabAttackMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\DrinkMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\PostEffect\GaussianBlur.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\IMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\IWeaponMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\MotionManager.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\MoveMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\MalletMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\OpenGateMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\Motion\RollMotion.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
-    <ClCompile Include="Application\SourceCode\PostEffect\Task.cpp">
-      <Filter>Uncategorized\Source</Filter>
     </ClCompile>
     <ClCompile Include="Application\SourceCode\UI\ItemBoxUIGroup.cpp">
       <Filter>Application\Source\UI</Filter>
@@ -834,9 +795,6 @@
     <ClCompile Include="Application\SourceCode\UI\OperationUI.cpp">
       <Filter>Application\Source\UI</Filter>
     </ClCompile>
-    <ClCompile Include="Application\SourceCode\UI\CameraTargetUI.cpp">
-      <Filter>Uncategorized\Source</Filter>
-    </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Model\ModelManager.cpp">
       <Filter>NewEngine\Source\Object\Other\Model</Filter>
     </ClCompile>
@@ -848,6 +806,54 @@
     </ClCompile>
     <ClCompile Include="NewEngine\Object\Other\Texture\TextureManager.cpp">
       <Filter>NewEngine\Source\Object\Other\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\BossAttack2Motion.cpp">
+      <Filter>Application\Source\Motion\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\BossAttack3Motion.cpp">
+      <Filter>Application\Source\Motion\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\BackstepMotion.cpp">
+      <Filter>Application\Source\Motion\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\BossGrabAttackMotion.cpp">
+      <Filter>Application\Source\Motion\Boss</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\UI\CameraTargetUI.cpp">
+      <Filter>Application\Source\UI</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\DrinkMotion.cpp">
+      <Filter>Application\Source\Motion\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\MoveMotion.cpp">
+      <Filter>Application\Source\Motion\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\OpenGateMotion.cpp">
+      <Filter>Application\Source\Motion\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\RollMotion.cpp">
+      <Filter>Application\Source\Motion\Player</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\IWeaponMotion.cpp">
+      <Filter>Application\Source\Motion\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\MalletMotion.cpp">
+      <Filter>Application\Source\Motion\Weapon</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\IMotion.cpp">
+      <Filter>Application\Source\Motion</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\Motion\MotionManager.cpp">
+      <Filter>Application\Source\Motion</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\ParticleMesh.cpp">
+      <Filter>Application\Source</Filter>
+    </ClCompile>
+    <ClCompile Include="NewEngine\Object\3D\ParticleParam.cpp">
+      <Filter>NewEngine\Source\Object\Other</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\SourceCode\GaugeParam.cpp">
+      <Filter>Application\Source\UI\Member</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1010,9 +1016,6 @@
     <ClInclude Include="NewEngine\Object\Other\Model\FbxModel.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\GaugeParam.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="Application\SourceCode\CollisionManager.h">
       <Filter>Application\Header</Filter>
     </ClInclude>
@@ -1078,12 +1081,6 @@
     </ClInclude>
     <ClInclude Include="Application\SourceCode\Motion\BossAttack3Motion.h">
       <Filter>Application\Header\Motion\Boss</Filter>
-    </ClInclude>
-    <ClInclude Include="Application\SourceCode\Motion\BossGrabAttackMotion.h">
-      <Filter>Application\Header\Motion\Boss</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Object\3D\ParticleParam.h">
-      <Filter>Uncategorized\Header</Filter>
     </ClInclude>
     <ClInclude Include="Application\SourceCode\Motion\DrinkMotion.h">
       <Filter>Application\Header\Motion\Player</Filter>
@@ -1247,23 +1244,8 @@
     <ClInclude Include="NewEngine\Object\2D\RenderTexture.h">
       <Filter>NewEngine\Header\Object\Other\Texture</Filter>
     </ClInclude>
-    <ClInclude Include="NewEngine\Object\3D\ParticleMesh.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Billboard.h">
       <Filter>NewEngine\Header\Util</Filter>
-    </ClInclude>
-    <ClInclude Include="Application\SourceCode\GaugeType.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="Application\SourceCode\PostEffect\GaussianBlur.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="Application\SourceCode\PostEffect\Task.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
-    <ClInclude Include="NewEngine\Object\2D\PostEffect.h">
-      <Filter>Uncategorized\Header</Filter>
     </ClInclude>
     <ClInclude Include="Application\SourceCode\UI\ItemBoxUIGroup.h">
       <Filter>Application\Header\UI</Filter>
@@ -1358,9 +1340,6 @@
     <ClInclude Include="Application\SourceCode\UI\ItemUI.h">
       <Filter>Application\Header\UI\Member</Filter>
     </ClInclude>
-    <ClInclude Include="Application\SourceCode\UI\CameraTargetUI.h">
-      <Filter>Uncategorized\Header</Filter>
-    </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Texture\TextureManager.h">
       <Filter>NewEngine\Header\Object\Other\Texture</Filter>
     </ClInclude>
@@ -1372,6 +1351,24 @@
     </ClInclude>
     <ClInclude Include="NewEngine\Object\Other\Model\ModelManager.h">
       <Filter>NewEngine\Header\Object\Other\Model</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\UI\CameraTargetUI.h">
+      <Filter>Application\Header\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\ParticleParam.h">
+      <Filter>NewEngine\Header\Object\Other</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\2D\PostEffect.h">
+      <Filter>NewEngine\Header\Object\2D</Filter>
+    </ClInclude>
+    <ClInclude Include="NewEngine\Object\3D\ParticleMesh.h">
+      <Filter>Application\Header</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\GaugeType.h">
+      <Filter>Application\Header\UI\Member</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\SourceCode\GaugeParam.h">
+      <Filter>Application\Header\UI\Member</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
